
Besure to also join the discord: https://discord.gg/wv6huJAwEv

NOTE: Make sure you refresh the page! Sometimes you will not get the lastest update!

+ Means something was added
^ Means something was upgraded or changed
- Means something was removed
------------------------------------------------------------
Nov, 12
^ Update site statistics
^ Added more reviews
------------------------------------------------------------
Nov, 10
^ Added more reviews
------------------------------------------------------------
Nov, 8
Submit your sounds for the soundboard here: https://forms.gle/1KHtjREBvbf1VCGG9
^ Added more sounds to the soundboard
^ Upgrade control menu on soundboard
^ Fixed bug with sound buttons being wonky with the controller
------------------------------------------------------------
Nov, 7
^ Added more splash texts
^ Added more reviews
------------------------------------------------------------
Nov, 5
LAX1DUDE has announced that he is going to stop development on eaglercraft, sadge
+ Added Happy Hop
^ Updated Eaglercraft for the last time
------------------------------------------------------------
Nov, 4
Now with over 200 games! W
+ Added Cars Simulator
^ Fixed error with Review image not loading
^ Added more reviews
------------------------------------------------------------
Nov, 3
+ Added Marvin Spectrum
^ Added more splash texts
------------------------------------------------------------
Nov, 2
+ Added Stickman Golf
+ Added 10 minutes till dawn
+ Added Alien Hominid
+ Added Escaping the prison
^ Make styles work better
^ Added more reviews
^ Fix 404 page styles not loading sometimes
------------------------------------------------------------
Nov, 1
^ Bump dependencies
------------------------------------------------------------
Oct, 31
Happy Halloween! *spooky skeleton*
------------------------------------------------------------
Oct, 30
+ Added OvO
+ Added Fancy Pants Adventures
+ Added Kitchen gun game
+ Added Tiny Islands