@@ -33,7 +33,7 @@
       </div>
       <div class="examples">
         <h4>Presets:</h4>
-        <p><b>Google Search: </b><button onclick="applyUrl('https://storage.googleapis.com/operating-anagram-8280/favicon-32x32.png', 'Math pratice - Google Search');">Apply</button></p>
+        <p><b>Google Search: </b><button onclick="applyUrl('https://storage.googleapis.com/operating-anagram-8280/favicon-32x32.png', 'Math practice - Google Search');">Apply</button></p>
         <p><b>Google Classroom: </b><button onclick="applyUrl('https://ssl.gstatic.com/classroom/favicon.png', 'Classes');">Apply</button></p>
         <p><b>Google Docs: </b><button onclick="applyUrl('https://ssl.gstatic.com/docs/documents/images/kix-favicon7.ico', 'Class notes - Google Docs');">Apply</button></p>
         <p><b>Google Drive: </b><button onclick="applyUrl('https://ssl.gstatic.com/images/branding/product/2x/hh_drive_36dp.png', 'My Drive - Google Drive');">Apply</button></p>
@@ -56,11 +56,11 @@
     <p id="switchtxt">Google Analytics <span id="gapls" style="color: #eb4034;"></span></p>
     <div class="switchcon">
       <label class="switch">
-        <input id="not" type="checkbox" checked disabled/>
-        <span onclick="tog3()" class="slider round"></span>
+        <input id="not" type="checkbox" disabled/>
+        <span onclick="" class="slider round"></span>
       </label>
     </div>
-    <p id="switchtxt">New Game notifications <span id="notpls" style="color: #eb4034;"></span></p>
+    <p id="switchtxt">New Game notifications <span style="color: #eb4034;">Due to issues, this has been disabled for now.</span></p>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5756835229788588" crossorigin="anonymous"></script>
     <ins class="adsbygoogle" style="display: block;" data-ad-client="ca-pub-5756835229788588" data-ad-slot="6230603875" data-ad-format="auto" data-full-width-responsive="true"></ins>
     <script>
