@@ -20,6 +20,7 @@ NOTE: Make sure you refresh the page! Sometimes you will not get the lastest upd
 Nov, 12
 ^ Update site statistics
 ^ Added more reviews
+- Disable setting for new game notifications due to issues
 ------------------------------------------------------------
 Nov, 10
 ^ Added more reviews
